[gd_scene load_steps=5 format=3 uid="uid://45sidcjt2eav"]

[ext_resource type="Script" path="res://towers/machine_gun_tower.gd" id="1_6fatu"]
[ext_resource type="Texture2D" uid="uid://b03f02dau8pcj" path="res://assets/towers/towerDefense_tile249.png" id="2_mvgv7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7ksg"]
size = Vector2(79, 84)

[sub_resource type="CircleShape2D" id="CircleShape2D_kd7pk"]
radius = 300.0

[node name="MachineGunTower" type="StaticBody2D"]
script = ExtResource("1_6fatu")

[node name="TowerHitBox" type="CollisionShape2D" parent="."]
position = Vector2(-16.5, 0)
shape = SubResource("RectangleShape2D_i7ksg")

[node name="TowerGunMuzzle" type="Marker2D" parent="."]
position = Vector2(56, 0)

[node name="TowerRange" type="Area2D" parent="."]

[node name="TowerRangeCollisionShape" type="CollisionShape2D" parent="TowerRange"]
shape = SubResource("CircleShape2D_kd7pk")

[node name="BulletsFiredContainer" type="Node" parent="."]

[node name="TowerDefenseTile249" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_mvgv7")

[connection signal="body_entered" from="TowerRange" to="." method="_on_tower_range_body_entered"]
[connection signal="body_exited" from="TowerRange" to="." method="_on_tower_range_body_exited"]
